[gd_scene load_steps=3 format=2]

[ext_resource path="res://Puzzle Elements/Scripts/Moving_Platform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Tiles_16.tres" type="TileSet" id=2]

[node name="Moving Platform" type="Node2D"]
script = ExtResource( 1 )

[node name="PathLine" type="Line2D" parent="."]
default_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 1

[node name="Platform" type="Node2D" parent="."]

[node name="PlatformSpr" type="TileMap" parent="Platform"]
position = Vector2( -64, -32 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 2, 65536, 0, 131072, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131074 )

[node name="MoveForward" type="Tween" parent="."]

[node name="MoveBack" type="Tween" parent="."]

[connection signal="tween_all_completed" from="MoveForward" to="." method="_on_move_forward_done"]
[connection signal="tween_all_completed" from="MoveBack" to="." method="_on_move_back_done"]
